# ytp-convert

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi-publish.yml
scripts/: installDependancies.cmd
src/: VideotoMp4.py
ytp2mp3/: PlaylistDownloader.py  __init__.py  cli.py
ytp_convert/: __init__.py  cli.py  downloader.py
