[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytp2mp3"
version = "0.1.3"
description = "A CLI tool to convert YouTube playlists into a single MP3 file"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}

authors = [
  { name="Aaron Zachariah", email="aaron.zachariah@gmail.com" }
]

dependencies = [
  "yt-dlp",
  "pydub"
]

[project.urls]
"Homepage" = "https://github.com/zachaa2/ytp2mp3"

[project.scripts]
ytp2mp3 = "ytp2mp3.cli:main"
