[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytp-convert"
version = "1.1.0"
description = "A CLI tool to convert YouTube playlists into a single file"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}

authors = [
  { name="Aaron Zachariah", email="aaron.zachariah@gmail.com" }
]

dependencies = [
  "yt-dlp",
  "pydub"
]

[project.urls]
"Homepage" = "https://github.com/zachaa2/ytp-convert"

[project.scripts]
ytp-convert = "ytp_convert.cli:main"
